data/derived/sp14/progs/unify/prog3789.ml.out
Characters 114-134:
  | true  -> digitsOfInt (n / 10) ::  (n mod 10);;
             ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
